Remove BEM from google-signin button

--- a/app/index.html
+++ b/app/index.html
@@ -151,8 +151,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="google-sign-in"
              tabindex="0"
              on-tap="signIn">
-          <span class="google-sign-in__icon"></span>
-          <span class="google-sign-in__button-text">Google</span>
+          <span class="google-sign-in-icon"></span>
+          <span class="google-sign-in-label">Google</span>
         </div>
       </div>
     </paper-dialog>
