Separate backupTodos from primary todos array

--- a/app/index.html
+++ b/app/index.html
@@ -175,10 +175,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
          we're waiting to hear from Firebase, and it lets the user see their
          old todos if they start the app offline.
          This SHOULD NOT write to Firebase. If the user has cleared their
-         localstorage, it will not nullify everything saved in Firebase. -->
+         localstorage, it should not nullify everything saved in Firebase. -->
     <iron-localstorage name="polymer-todo"
+                       on-iron-localstorage-load="backfillTodos"
                        on-iron-localstorage-load-empty="createDefaultTodos"
-                       value="{{todos}}">
+                       value="{{backupTodos}}">
     </iron-localstorage>
 
   </template>
