Ditch Menu type

--- a/app/index.html
+++ b/app/index.html
@@ -66,9 +66,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div drawer>
 
         <!-- Drawer Toolbar -->
-        <paper-toolbar id="drawerToolbar">
-          <span class="paper-font-title">Menu</span>
-        </paper-toolbar>
+        <paper-toolbar id="drawerToolbar"></paper-toolbar>
 
         <!-- Drawer Content -->
         <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
