Tune up focus styles a bit

--- a/app/elements/todo-item/todo-item.html
+++ b/app/elements/todo-item/todo-item.html
@@ -38,6 +38,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color: #9E9E9E;
       text-decoration: line-through;
     }
+    .label:focus {
+      outline-color: var(--default-primary-color);
+    }
     .btn-cancel {
       opacity: 0;
       /* Same as paper-material shadow */
