--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -119,6 +119,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     font-weight: bold;
   }
 
+  .clear-btn:hover,
+  .clear-btn:focus {
+    background-color: var(--text-primary-color);
+    color: var(--default-primary-color);
+  }
+
   /* Height of the scroll area */
   .content {
     height: 900px;
