--- a/app/elements/todo-item/todo-item.html
+++ b/app/elements/todo-item/todo-item.html
@@ -78,7 +78,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                    class="flex"
                    value="[[todo.label]]"
                    no-label-float
-                   on-input="_onLabelChanged"
+                   on-change="_onLabelChanged"
                    on-keypress="_checkConfirmation"></paper-input>
 
       <paper-icon-button icon="todo-icons:delete"
