--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -26,11 +26,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-styles/paper-styles-classes.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
-<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
-
-<!-- Neon elements -->
-<link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
-<link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 
 <!-- Platinum elements -->
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
@@ -44,6 +39,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="todo-list/todo-list.html">
-<link rel="import" href="todo-input/todo-input.html">
-<link rel="import" href="todo-icons/todo-icons.html">
+<link rel="import" href="todo-data/todo-data.html">
+<link rel="import" href="todo-view/todo-view.html">
